Use URI to replace deprecated URL constructors