@@ -28,9 +28,12 @@ import org.newdawn.slick.util.Log;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+
+import static itdelatrisu.opsu.Utils.getSafeURI;
 
 /**
  * Download server: <a href="https://osu.hexide.com/">...</a>
@@ -81,8 +84,10 @@ public class HexideServer extends DownloadServer {
 				search = String.format(HOME_URL, resultIndex);
 			else
 				search = String.format(SEARCH_URL, URLEncoder.encode(query, StandardCharsets.UTF_8), resultIndex);
-			URL searchURL = new URL(search);
-			JSONArray arr = null;
+
+			URL searchURL = getSafeURI(search).toURL();
+			JSONArray arr;
+
 			try {
 				arr = Utils.readJsonArrayFromUrl(searchURL);
 			} catch (IOException e1) {
@@ -128,7 +133,7 @@ public class HexideServer extends DownloadServer {
 			// NOTE: The API doesn't provide a result count without retrieving
 			// all results at once; this approach just gets pagination correct.
 			this.totalResults = arr.length() + resultIndex;
-		} catch (MalformedURLException e) {
+		} catch (MalformedURLException | URISyntaxException e) {
 			ErrorHandler.error(String.format("Problem loading result list for query '%s'.", query), e, true);
 		} catch (JSONException e) {
 			Log.error(e);
